<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/perfume"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/amount_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:autofillHints="@string/total_amount"
        android:hint="@string/total_amount"
        android:inputType="number" />

    <EditText
        android:id="@+id/upi_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/amount_et"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:autofillHints="@string/email"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/first_name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/upi_id"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="127dp"
        android:layout_marginRight="20dp"
        android:autofillHints="@string/first_name"
        android:hint="@string/first_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/upi_id"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="184dp"
        android:layout_marginRight="20dp"
        android:autofillHints="@string/last_name"
        android:hint="@string/last_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/note2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="27dp"
        android:layout_marginRight="20dp"
        android:autofillHints="@string/xxxx_xxxx_xxxx"
        android:hint="@string/card_number"
        android:inputType="number" />

    <EditText
        android:id="@+id/note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="103dp"
        android:layout_marginRight="20dp"
        android:autofillHints="@string/cvv"
        android:hint="@string/cvv"
        android:inputType="number" />

    <Button
        android:id="@+id/send"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="286dp"
        android:layout_marginRight="286dp"
        android:layout_marginBottom="85dp"
        android:background="@drawable/custom_button"
        android:text="@string/credit"
        android:textColor="@color/colorAccent" />

    <Button
        android:id="@+id/pay"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="51dp"
        android:layout_marginRight="51dp"
        android:layout_marginBottom="85dp"
        android:background="@drawable/custom_button"
        android:text="@string/debit"
        android:textColor="@color/colorAccent"
        tools:ignore="InvalidId" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="150dp"
        android:autofillHints="@string/enter_date"
        android:ems="14"
        android:hint="@string/enter_date"
        android:inputType="date" />

    <Button
        android:id="@+id/button1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText1"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/custom_button"
        android:text="@string/enter_expiry_date"
        android:textColor="@color/colorAccent" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>